# eea-climate-data-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  PKG-INFO  README.md  TODO.md  pyproject.toml
.github/workflows/: release.yml
docs/: RECIPES.md  SPIKE-REVIEW.md  SPIKE-hun-climate-policy-mcp.md
examples/: country_inventory_counts.sql  hu_measures_by_status.sql  hu_transport_measures_by_status.sql  hungary_inventory_counts.sql  pams_quantification_completeness.sql  pams_sector_quantification.sql
scripts/: live_smoke.py  release
src/eea_climate_data/: __init__.py  cache.py  cli.py  config.py  discodata.py  errors.py  factory.py  mcp_server.py  service.py  sql_validation.py
src/eu_climate_policy/: __init__.py  cache.py  cli.py  discodata.py  factory.py  mcp_server.py  profile.py  service.py  sql_validation.py
src/hun_climate_policy/: __init__.py  cache.py  cli.py  discodata.py  errors.py  factory.py  mcp_server.py  models.py  profile.py  service.py  sql_validation.py
tests/: conftest.py  test_mcp.py  test_provider.py  test_service.py  test_sql_validation.py
