[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eea-climate-data-mcp"
version = "0.1.0"
description = "Schema-aware, read-only CLI and MCP access to European climate data in EEA Discodata"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["climate", "eea", "europe", "mcp", "greenhouse-gas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.28,<2",
  "platformdirs>=4.2,<5",
  "pydantic>=2.7,<3",
  "sqlglot>=25,<29",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9", "pytest-asyncio>=0.25,<2", "respx>=0.21,<1"]

[project.scripts]
eu-climate = "eea_climate_data.cli:app"
eea-climate-data-mcp = "eea_climate_data.mcp_server:main"

[project.urls]
Documentation = "https://github.com/kalcifield/eea-climate-data-mcp#readme"
Repository = "https://github.com/kalcifield/eea-climate-data-mcp"
Issues = "https://github.com/kalcifield/eea-climate-data-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/eea_climate_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[dependency-groups]
dev = ["mypy>=1.15,<2", "prek>=0.4.10", "ruff>=0.11,<1"]
